<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_ros_control_interface_fix</name>
  <version>2.8.0</version>
  <description>ros_control controller manager interface for MoveIt</description>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>

  <license>BSD-3-Clause</license>

  <author email="arbogastaw@gmail.com">Alex Arbogast</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>moveit_common</depend>
  <depend>rclcpp_action</depend>
  <depend>controller_manager_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_control_interface</depend>
  <depend version_gte="1.11.2">pluginlib</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
